# jupyter_server_terminals_proxy

./: README.md  pyproject.toml
jupyter-config/: jupyter_server_terminals_proxy.json
jupyter_server_terminals_proxy/: __init__.py  api_handlers.py  app.py  handlers.py
