[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "jupyter_server_terminals_proxy"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "A Jupyter Server Extension Proxying Terminals."
keywords = ["ipython", "jupyter"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
  "jupyter_server>=2.0.0",
  "httpx>=0.23.1",
  "websockets>=10.4",
]

[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Homepage = "https://github.com/davidbrochart/jupyter_server_terminals_proxy"

[tool.hatch.version]
path = "jupyter_server_terminals_proxy/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"
