[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter_server_terminals_proxy"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "A Jupyter Server Extension Proxying Terminals."
keywords = ["ipython", "jupyter"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
  "anyio >=4.3.0,<5.0.0",
  "httpx >=0.27.0,<0.28",
  "httpx-ws >=0.6.0,<0.7.0",
  "jupyter_server >=1.0.0,<3.0.0",
]

[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Homepage = "https://github.com/davidbrochart/jupyter_server_terminals_proxy"

[tool.hatch.version]
path = "jupyter_server_terminals_proxy/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"
